--- a/site/wp-content/themes/catapult/sass/_catapult-variables.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-variables.scss
@@ -8,6 +8,7 @@ $pink: rgb(236, 80, 98);
 $teal: rgb(132, 182, 180);
 $yellow: rgb(242, 202, 13);
 $grey: rgb(121, 123, 122);
+$darkGrey: rgb(81, 80, 82);
 $purple: rgb(168, 123, 139);
 $greyFont: rgb(61, 59, 62);
 $darkGreyFont: rgb(41, 39, 42);
