--- a/site/wp-content/themes/catapult/css/faq.css
+++ b/site/wp-content/themes/catapult/css/faq.css
@@ -1525,7 +1525,7 @@ html.no-svg .header .logo {
     margin: 20px 0 0 0; }
     #page-wrap .twitter-list .twitter-list__item {
       padding: 0;
-      margin: 0 0 20px 0; }
+      margin: 0 0 40px 0; }
 
 .post-body img {
   max-width: 100%; }
@@ -1536,14 +1536,14 @@ html.no-svg .header .logo {
   line-height: 1em; }
   .post-title a {
     text-decoration: none;
-    color: #FFFFFF; }
+    color: #f2ad4b; }
 
 /* -------------------
   TAGS
 -------------------- */
 .tags {
   overflow: hidden;
-  margin: 0;
+  margin: 12px 0 0 0;
   padding: 0;
   float: left; }
   .tags .tag {
@@ -1615,8 +1615,8 @@ html.no-svg .header .logo {
     .post-box .post-top p {
       margin: 0; }
   .post-box .post-title {
-    margin: 0;
-    padding: 0 0 22px 0;
+    margin: -4px 0 0 0;
+    padding: 0 0 11px 0;
     text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.5); }
     .post-box .post-title a:hover {
       color: #f2ad4b; }
@@ -1634,7 +1634,7 @@ html.no-svg .header .logo {
     color: #e3dcd8; }
   .post-box .post-meta {
     display: block;
-    padding: 5px 0;
+    padding: 0 0 10px 0;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     letter-spacing: 1px; }
 
@@ -1777,10 +1777,7 @@ footer {
   margin: 0;
   padding: 40px 0;
   overflow: hidden;
-  background: rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: inset 0px 7px 7px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: inset 0px 7px 7px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0px 7px 7px 0px rgba(0, 0, 0, 0.5); }
+  background-color: #515052; }
   footer .contact-button {
     width: 33px;
     float: left;
@@ -1806,6 +1803,9 @@ footer {
 
 .contact-button {
   margin-bottom: 7px; }
+
+.footer-link {
+  display: none; }
 
 /* ==========================================================================
    Helper classes
