--- a/site/wp-content/themes/catapult/css/main.css
+++ b/site/wp-content/themes/catapult/css/main.css
@@ -2377,10 +2377,7 @@ footer {
   margin: 0;
   padding: 40px 0;
   overflow: hidden;
-  background: rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: inset 0px 7px 7px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: inset 0px 7px 7px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0px 7px 7px 0px rgba(0, 0, 0, 0.5); }
+  background-color: #515052; }
   footer .contact-button {
     width: 33px;
     float: left;
@@ -2406,6 +2403,9 @@ footer {
 
 .contact-button {
   margin-bottom: 7px; }
+
+.footer-link {
+  display: none; }
 
 /* ==========================================================================
    Helper classes
