--- a/site/wp-content/themes/catapult/sass/_catapult-variables.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-variables.scss
@@ -13,6 +13,7 @@ $purple: rgb(168, 123, 139);
 $greyFont: rgb(61, 59, 62);
 $darkGreyFont: rgb(41, 39, 42);
 $lightGreyFont: rgb(227, 220, 216);
+$greyBG: #515052;
 $serifFont: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 //"freight-text-pro",serif;
 $sansFont: "franklin-gothic-ext-comp-urw", "Arial Narrow", sans-serif;
