--- a/site/wp-content/themes/catapult/sass/main.scss
+++ b/site/wp-content/themes/catapult/sass/main.scss
@@ -15,5 +15,7 @@
 @import "catapult-drawer";
 @import "catapult-events";
 @import "catapult-donate";
+@import "catapult-blog";
+@import "catapult-thanks";
 @import "catapult-footer";
 @import "boilerplate-2";
