--- a/site/wp-content/themes/catapult/sass/_catapult-contact.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-contact.scss
@@ -16,6 +16,18 @@
   h3 {
     font-size: 1.9em;
   }
+  
+  .contact-locations {
+    
+  }
+  
+  .contact__item {
+    width: 25%;
+    
+    @media only screen and (max-width: 750px) {
+      width: 50%;
+    }
+  }
 
 	.contact__buttons {
 		padding-top: 30px;
