--- a/site/wp-content/themes/catapult/sass/_catapult-floater.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-floater.scss
@@ -65,8 +65,7 @@
 	}
 }
 
-@media only screen 
-    and (max-width : 1024px) {
+@media only screen and (max-width : 1024px) {
     
     .social {
       display: none;
