--- a/site/wp-content/themes/catapult/sass/_catapult-common.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-common.scss
@@ -196,6 +196,10 @@ a.fancy {
   font-weight: normal;
 }
 
+.header-link {
+  text-decoration: none;
+}
+
 .title-shadow {
   @include textShadow(2px, 2px, 5px, rgba(0, 0, 0, 0.9));
 }
@@ -734,4 +738,14 @@ section {
     font-size: 0.7em;
     color: white;
   }
+}
+
+.youtube-player {
+  width: 100%;
+  height: 570px;
+}
+
+.fullwidth-image {
+  width: 100%;
+  height: auto;
 }
