--- a/site/wp-content/themes/catapult/sass/main.scss
+++ b/site/wp-content/themes/catapult/sass/main.scss
@@ -17,5 +17,6 @@
 @import "catapult-donate";
 @import "catapult-blog";
 @import "catapult-thanks";
+@import "catapult-services";
 @import "catapult-footer";
 @import "boilerplate-2";
