--- a/site/wp-content/themes/catapult/sass/_catapult-blog.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-blog.scss
@@ -352,7 +352,8 @@
         text-decoration: none;
         color: rgba(224,218,216,1.0);
         
-        &:hover {
+        &:hover,
+        &.active {
           color: $orange;
         }
         
