--- a/site/wp-content/themes/catapult/css/main.css
+++ b/site/wp-content/themes/catapult/css/main.css
@@ -1830,7 +1830,7 @@ html.no-svg .header .logo .logo-img {
 /* line 202, site/wp-content/themes/catapult/sass/_catapult-header.scss */
 .header .logo {
   display: inline-block;
-  padding: 10px 0 7px 50px;
+  padding: 10px 0 10px 50px;
 }
 /* line 206, site/wp-content/themes/catapult/sass/_catapult-header.scss */
 .header .logo:focus {
@@ -4013,7 +4013,7 @@ html.no-touch .team-member-details.hover {
 
 /* line 535, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 img.pe2-photo.picasa-image {
-  padding: 10px;
+  padding: 0;
   border: none;
 }
 
